[gd_scene load_steps=3 format=2]

[ext_resource path="res://prototype/Character/Enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://prototype/Character/Enemy/Assassin/Assassin.gd" type="Script" id=2]

[node name="Assassin" index="0" instance=ExtResource( 1 )]

script = ExtResource( 2 )
max_health = 5
damage_to_deal = 4
movement_speed = 5.0
lunge_attack_range = 250
lunge_attack_force = 2000
seconds_visible = 3

[node name="ColorBox" parent="." index="1"]

color = Color( 1, 0, 0, 0.07 )

[node name="AppearTween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="DisappearTween" type="Tween" parent="." index="4"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="VisibleTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="tween_completed" from="AppearTween" to="." method="_on_AppearTween_tween_completed"]

[connection signal="timeout" from="VisibleTimer" to="." method="_on_VisibleTimer_timeout"]


